--- a/components/panels/styles/PanelPlayerPanel.module.css
+++ b/components/panels/styles/PanelPlayerPanel.module.css
@@ -8,6 +8,7 @@
 .panel {
   display: flex;
   position: relative;
+  top: -10;
   flex-direction: column;
   box-shadow:
     inset 0 2px 12px rgba(0, 0, 0, 0.8),
@@ -16,7 +17,7 @@
   border-radius: 0.5rem;
   background: linear-gradient(to bottom, #0c0a09 0%, #1c1917 50%, #0c0a09 100%);
   padding: 1.5rem;
-  width: 500px;
+  width: 35vw;
   height: 90vh;
 }
 
