--- a/plop-generators/plop-templates/methodFetcher/apiGetMethodFetcher.hbs
+++ b/plop-generators/plop-templates/methodFetcher/apiGetMethodFetcher.hbs
@@ -30,6 +30,10 @@ export async function GET(request: NextRequest{{#if methodParamsColumns}}, { par
     const parsedParams = typeParamsSchema.parse(paramsFromPromise)
   {{/if}}
 
+    if (session?.user?.playerId !== parsedParams.playerId) {
+      return NextResponse.json({ message: "Forbidden" }, { status: 403 })
+    }
+    
     const clientEtag = request.headers.get("if-none-match") ?? undefined
 
     const { record, etag, cacheHit, etagMatched } = await fetch{{methodPascalName}}Service({{#if methodParamsColumns}}parsedParams,{{/if}} { clientEtag })
