--- a/plop-generators/plop-templates/methodAction/serviceGetMethodAction.hbs
+++ b/plop-generators/plop-templates/methodAction/serviceGetMethodAction.hbs
@@ -2,6 +2,7 @@
 "use server"
 
 import { {{methodParamsTypeName}}, {{methodCamelName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
+import { getActivePlayerServer } from "@/methods/server-fetchers/players/core/getActivePlayerServer"
 
 //MANUAL CODE - START
 
