--- a/plop-generators/plop-templates/methodFetcher/snippetHookMethod.hbs
+++ b/plop-generators/plop-templates/methodFetcher/snippetHookMethod.hbs
@@ -2,7 +2,7 @@
   "Destructure use{{methodPascalName}}": {
     "prefix": "hook_{{schema}}_core_use{{methodPascalName}}",
     "body": [
-      "useFetch{{methodPascalName}}({{#if methodParamsColumns}}{$1}{{/if}})",
+      "useFetch{{methodPascalName}}({{#if methodParamsColumns}}{ {{#each methodParamsColumns}}{{camelName}}{{#unless @last}}, {{/unless}}{{/each}} }{{/if}})",
       "const {{methodCamelName}} = useAtomValue({{methodCamelName}}Atom)"
     ],
     "description": "Destructuring use{{methodPascalName}} hook"
