--- a/plop-generators/plop-templates/methodAction/serviceGetMethodAction.hbs
+++ b/plop-generators/plop-templates/methodAction/serviceGetMethodAction.hbs
@@ -14,32 +14,43 @@ playerId: number
 //MANUAL CODE - END
 
 export async function {{methodCamelName}}Service(params: T{{methodPascalName}}ServiceParams) {
-  const sessionPlayerId = (await getActivePlayerServer({ userId: params.sessionUserId })).raw[0].id
-  const playerId = params.playerId
-
-  if (sessionPlayerId !== playerId) {
-    throw new Error("Active player mismatch")
-  }
-
-  //MANUAL CODE - START
-
-  {{#each methodParamsColumns}}
-  const {{camelName}} =
-  {{/each}}
-
-  //MANUAL CODE - END
-
-  const data: {{methodParamsTypeName}} = {
-    {{#each methodParamsColumns}}
-    {{camelName}}: {{camelName}},
-    {{/each}}
-  }
-
   try {
+    const sessionPlayerId = (await getActivePlayerServer({ userId: params.sessionUserId })).raw[0].id
+    const playerId = params.playerId
+
+    if (sessionPlayerId !== playerId) {
+      return {
+        status: false,
+        message: "Active player mismatch",
+      }
+    }
+
+    //MANUAL CODE - START
+
+    {{#each methodParamsColumns}}
+    const {{camelName}} =
+    {{/each}}
+
+    //MANUAL CODE - END
+
+    const data: {{methodParamsTypeName}} = {
+      {{#each methodParamsColumns}}
+      {{camelName}}: {{camelName}},
+      {{/each}}
+    }
+
     const result = await {{methodCamelName}}(data)
     return result
   } catch (error) {
-    console.error("Error {{methodCamelName}}Service :", error)
-    return "Failed to {{methodCamelName}}Service"
+    console.error("Error {{methodCamelName}}Service :", {
+      error,
+      params,
+      timestamp: new Date().toISOString(),
+    })
+
+    return {
+      status: false,
+      message: "Unexpected error occurred. Please refresh the page.",
+    }
   }
 }
