--- a/plop-generators/plop-templates/methodAction/serviceGetMethodAction.hbs
+++ b/plop-generators/plop-templates/methodAction/serviceGetMethodAction.hbs
@@ -15,7 +15,7 @@ playerId: number
 
 export async function {{methodCamelName}}Service(params: T{{methodPascalName}}ServiceParams) {
   try {
-    const sessionPlayerId = (await getActivePlayerServer({ userId: params.sessionUserId })).raw[0].id
+    const sessionPlayerId = (await getActivePlayerServer({ userId: params.sessionUserId }, { forceFresh: true })).raw[0].id
     const playerId = params.playerId
 
     if (sessionPlayerId !== playerId) {
