--- a/plop-generators/plop-templates/getTable/hookMutateTableByKey.hbs
+++ b/plop-generators/plop-templates/getTable/hookMutateTableByKey.hbs
@@ -12,7 +12,12 @@ export function useMutate{{schemaTablePascalName}}({{#if methodParamsColumns}} p
   const set{{schemaTablePascalName}} = useSetAtom({{tableCamelName}}Atom)
   {{#if mutationMergeOldData}}const {{tableCamelName}} = useAtomValue({{tableCamelName}}Atom){{/if}}
 
-  function mutate{{schemaTablePascalName}}(optimisticParams: Partial<{{methodTypeName}}> | Partial<{{methodTypeName}}>[]) {
+  function mutate{{schemaTablePascalName}}(optimisticParams?: Partial<{{methodTypeName}}> | Partial<{{methodTypeName}}>[]) {
+    if (!optimisticParams) {
+      mutate()
+      return
+    }
+
     const paramsArray = Array.isArray(optimisticParams) ? optimisticParams : [optimisticParams]
     
     //MANUAL CODE - START
