--- a/plop-generators/plop-templates/methodFetcher/apiGetMethodFetcher.hbs
+++ b/plop-generators/plop-templates/methodFetcher/apiGetMethodFetcher.hbs
@@ -31,7 +31,7 @@ export async function GET(request: NextRequest{{#if methodParamsColumns}}, { par
     const parsedParams = typeParamsSchema.parse(paramsFromPromise)
   {{/if}}
 
-    const sessionPlayerId = (await getActivePlayerServer({ userId: sessionUserId })).raw[0].id
+    const sessionPlayerId = (await getActivePlayerServer({ userId: sessionUserId }, { forceFresh: true })).raw[0].id
 
     if (sessionPlayerId !== parsedParams.playerId) {
       return NextResponse.json({ message: "Not found" }, { status: 404 })
