--- a/plop-generators/plop-templates/getTable/hookMutateTable.hbs
+++ b/plop-generators/plop-templates/getTable/hookMutateTable.hbs
@@ -1,11 +1,11 @@
 // GENERATED CODE - SHOULD BE EDITED MANUALLY TO END CONFIGURATION - hookMutateTable.hbs
 "use client"
 
-import { {{indexTypeName}}, {{methodTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
-{{#if mutationMergeOldData}}import { {{tableCamelName}}Atom } from "@/store/atoms"{{/if}}
-import { {{#if mutationMergeOldData}}, useAtomValue{{/if}} } from "jotai"
+import { {{#if mutationMergeOldData}}{{indexTypeName}}, {{/if}}{{methodTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 import useSWR from "swr"
-import { arrayToObjectKey } from "@/methods/functions/util/converters"
+{{#if mutationMergeOldData}}import { {{tableCamelName}}Atom } from "@/store/atoms"{{/if}}
+{{#if mutationMergeOldData}}import { useAtomValue } from "jotai"{{/if}}
+{{#if mutationMergeOldData}}import { arrayToObjectKey } from "@/methods/functions/util/converters"{{/if}}
 
 export function useMutate{{schemaTablePascalName}}() {
   const { mutate } = useSWR<{{methodTypeName}}[]>(`{{apiPathParams}}`)
