--- a/plop-generators/plop-templates/getTable/hookMutateTable.hbs
+++ b/plop-generators/plop-templates/getTable/hookMutateTable.hbs
@@ -1,19 +1,20 @@
 // GENERATED CODE - SHOULD BE EDITED MANUALLY TO END CONFIGURATION - hookMutateTable.hbs
 "use client"
 
+import { useSWRConfig } from "swr"
 import { {{#if mutationMergeOldData}}{{indexTypeName}}, {{/if}}{{methodTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
-import useSWR from "swr"
 {{#if mutationMergeOldData}}import { {{tableCamelName}}Atom } from "@/store/atoms"{{/if}}
 {{#if mutationMergeOldData}}import { useAtomValue } from "jotai"{{/if}}
 {{#if mutationMergeOldData}}import { arrayToObjectKey } from "@/methods/functions/util/converters"{{/if}}
 
 export function useMutate{{schemaTablePascalName}}() {
-  const { mutate } = useSWR<{{methodTypeName}}[]>(`{{apiPathParams}}`)
+  const { mutate } = useSWRConfig()
+  const key = `{{apiPathParams}}`
   {{#if mutationMergeOldData}}const {{tableCamelName}} = useAtomValue({{tableCamelName}}Atom){{/if}}
 
   function mutate{{schemaTablePascalName}}(optimisticParams?: Partial<{{methodTypeName}}> | Partial<{{methodTypeName}}>[]) {
     if (!optimisticParams) {
-      mutate()
+      mutate(key)
       return
     }
     
@@ -45,7 +46,7 @@ export function useMutate{{schemaTablePascalName}}() {
     const optimisticDataMergeWithOldDataArray = Object.values(optimisticDataMergeWithOldData)
 {{/if}}
 
-    mutate({{#if mutationMergeOldData}}optimisticDataMergeWithOldDataArray{{else}}dataWithDefaults{{/if}}, {
+    mutate(key, {{#if mutationMergeOldData}}optimisticDataMergeWithOldDataArray{{else}}dataWithDefaults{{/if}}, {
       optimisticData: {{#if mutationMergeOldData}}optimisticDataMergeWithOldDataArray{{else}}dataWithDefaults{{/if}},
       rollbackOnError: true,
       revalidate: false,
