--- a/plop-generators/plop-templates/methodFetcher/hookMutateMethodFetcher.hbs
+++ b/plop-generators/plop-templates/methodFetcher/hookMutateMethodFetcher.hbs
@@ -1,19 +1,20 @@
 // GENERATED CODE - SHOULD BE EDITED MANUALLY TO END CONFIGURATION - hookMutateMethodFetcher.hbs
 "use client"
 
+import { useSWRConfig } from "swr"
 import { {{#if mutationMergeOldData}}{{indexTypeName}}, {{/if}}{{#if methodParamsColumns}} {{methodParamsTypeName}}, {{methodTypeName}}{{/if}}  } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
 {{#if mutationMergeOldData}}import { {{methodCamelName}}Atom } from "@/store/atoms"{{/if}}
 {{#if mutationMergeOldData}}import { useAtomValue } from "jotai"{{/if}}
-import useSWR from "swr"
 {{#if mutationMergeOldData}}import { arrayToObjectKey } from "@/methods/functions/util/converters"{{/if}} 
 
 export function useMutate{{methodPascalName}}({{#if methodParamsColumns}} params: {{methodParamsTypeName}}{{/if}}) {
-  const { mutate } = useSWR<{{methodTypeName}}[]>(`{{apiPathParams}}`)
+  const { mutate } = useSWRConfig()
+  const key = `{{apiPathParams}}`
   {{#if mutationMergeOldData}}const {{methodCamelName}} = useAtomValue({{methodCamelName}}Atom){{/if}}
 
   function mutate{{methodPascalName}}(optimisticParams?: Partial<{{methodTypeName}}> | Partial<{{methodTypeName}}>[]) {
     if (!optimisticParams) {
-      mutate()
+      mutate(key)
       return
     }
 
@@ -45,7 +46,7 @@ export function useMutate{{methodPascalName}}({{#if methodParamsColumns}} params
     const optimisticDataMergeWithOldDataArray = Object.values(optimisticDataMergeWithOldData)
 {{/if}} 
 
-    mutate({{#if mutationMergeOldData}}optimisticDataMergeWithOldDataArray{{else}}dataWithDefaults{{/if}}, {
+    mutate(key, {{#if mutationMergeOldData}}optimisticDataMergeWithOldDataArray{{else}}dataWithDefaults{{/if}}, {
       optimisticData: {{#if mutationMergeOldData}}optimisticDataMergeWithOldDataArray{{else}}dataWithDefaults{{/if}},
       rollbackOnError: true,
       revalidate: false,
