--- a/plop-generators/plop-templates/methodFetcher/hookMutateMethodFetcher.hbs
+++ b/plop-generators/plop-templates/methodFetcher/hookMutateMethodFetcher.hbs
@@ -12,13 +12,11 @@ export function useMutate{{methodPascalName}}({{#if methodParamsColumns}} params
   const key = `{{apiPathParams}}`
   {{#if mutationMergeOldData}}const {{methodCamelName}} = useAtomValue({{methodCamelName}}Atom){{/if}}
 
-  function mutate{{methodPascalName}}(optimisticParams?: Partial<{{methodTypeName}}> | Partial<{{methodTypeName}}>[]) {
+  function mutate{{methodPascalName}}(optimisticParams?: Partial<{{methodTypeName}}>[]) {
     if (!optimisticParams) {
       mutate(key)
       return
     }
-
-    const paramsArray = Array.isArray(optimisticParams) ? optimisticParams : [optimisticParams]
 
     //MANUAL CODE - START
 
@@ -30,7 +28,7 @@ export function useMutate{{methodPascalName}}({{#if methodParamsColumns}} params
 
     //MANUAL CODE - END
 
-    const dataWithDefaults = paramsArray.map((val) => ({
+    const dataWithDefaults = optimisticParams.map((val) => ({
       ...defaultValues,
       ...val,
     }))
