--- a/components/map/styles/Tile.module.css
+++ b/components/map/styles/Tile.module.css
@@ -1,7 +1,7 @@
 .BackgroundImage {
   position: relative;
   /* clip-path: polygon(10% 0%, 95% 10%, 100% 95%, 10% 100%, 0% 100%); */
-  border: 0.05vmin solid rgb(223, 61, 61);
+  /* border: 0.05vmin solid rgb(223, 61, 61); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
